traefik/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: main
  annotations:
    cert-manager.io/issuer: letsencrypt-prod
spec:
  tls:
    certResolver: letsencrypt
    secretName: proactivemonitoring
    domains:
      - main: proactivemonitoring.staging.ronpos.com
  entryPoints:
    - websecure
  routes:
    - match: Host(`proactivemonitoring.staging.ronpos.com`)
      kind: Rule
      services:
        - name: opensearch-dashboards
          port: 5601
