traefik/prometheus-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: prometheus
  annotations:
    cert-manager.io/issuer: letsencrypt-prod
spec:
  tls:
    certResolver: letsencrypt-prod
    secretName: proactivemonitoring
    domains:
      - main: proactivemonitoring.staging.ronpos.com
  entryPoints:
    - websecure
  routes:
    - match: Host(`proactivemonitoring.staging.ronpos.com`) && PathPrefix(`/prometheus`)
      kind: Rule
      services:
        - name: prometheus-service
          port: 9090
